--- a/Rabbit.IOnline/Web.Release.config
+++ b/Rabbit.IOnline/Web.Release.config
@@ -7,13 +7,14 @@
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an atrribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add name="IOnlineDb"
+      connectionString="Server=tcp:if2lpwetwz.database.windows.net,1433;Database=ionline;User ID=huanhvhd@if2lpwetwz;Password=Abc123456789;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
