Include a view file into csproj

--- a/Rabbit.IOnline/Rabbit.IOnline.csproj
+++ b/Rabbit.IOnline/Rabbit.IOnline.csproj
@@ -192,6 +192,9 @@
     <Content Include="Views\Message\List.cshtml" />
     <Content Include="Views\Home\MessageEditForm.cshtml" />
     <Content Include="Views\Message\Detail.cshtml" />
+    <Content Include="Views\Message\_MessageList.cshtml">
+      <SubType>Code</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
