--- a/Rabbit.IOnline/Rabbit.IOnline.csproj
+++ b/Rabbit.IOnline/Rabbit.IOnline.csproj
@@ -56,6 +56,10 @@
       <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Recaptcha.Web, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RecaptchaNet.1.3\lib\net45\Recaptcha.Web.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -170,6 +174,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Properties\PublishProfiles\ionline.pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="RecaptchaNet.Readme.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
@@ -192,11 +197,12 @@
     <Content Include="Scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Message\List.cshtml" />
-    <Content Include="Views\Home\MessageEditForm.cshtml" />
+    <Content Include="Views\Shared\_MessageEditForm.cshtml" />
     <Content Include="Views\Message\Detail.cshtml" />
-    <Content Include="Views\Message\_MessageList.cshtml">
+    <Content Include="Views\Shared\_MessageList.cshtml">
       <SubType>Code</SubType>
     </Content>
+    <Content Include="Views\Message\Save.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
