--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -12,6 +12,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="recaptchaPublicKey" value="6LcF-AsTAAAAALrP6vdHiTK12gMldr17lkxydxho" />
+    <add key="recaptchaPrivateKey" value="6LcF-AsTAAAAADnD0pQBmDtSEMWXjc4gDzWy_Ru1" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
