--- a/Rabbit.IWasThere.Data.EF/Rabbit.IWasThere.Data.EF.csproj
+++ b/Rabbit.IWasThere.Data.EF/Rabbit.IWasThere.Data.EF.csproj
@@ -34,6 +34,10 @@
   <ItemGroup>
     <Compile Include="AppDbContext.cs" />
     <Compile Include="EfMessageRepository.cs" />
+    <Compile Include="Migrations\201508310442428_AddCategory.cs" />
+    <Compile Include="Migrations\201508310442428_AddCategory.Designer.cs">
+      <DependentUpon>201508310442428_AddCategory.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -62,6 +66,11 @@
       <Project>{A4A5EDAF-8CB9-42CC-A3E8-2311601AF1A8}</Project>
       <Name>Rabbit.IWasThere.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201508310442428_AddCategory.resx">
+      <DependentUpon>201508310442428_AddCategory.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
