--- a/Rabbit.IWasThere.Common/Rabbit.IWasThere.Common.csproj
+++ b/Rabbit.IWasThere.Common/Rabbit.IWasThere.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3D8E0083-05BF-403D-82E0-781156A4C8D1}</ProjectGuid>
+    <ProjectGuid>{EB60EAA6-42EE-4EB0-99FD-7A911FBEFEAD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rabbit.IWasThere.Data</RootNamespace>
-    <AssemblyName>Rabbit.IWasThere.Data</AssemblyName>
+    <RootNamespace>Rabbit.IWasThere.Common</RootNamespace>
+    <AssemblyName>Rabbit.IWasThere.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,15 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="IMessageCounter.cs" />
-    <Compile Include="IMessageRepository.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Rabbit.IWasThere.Domain\Rabbit.IWasThere.Domain.csproj">
-      <Project>{a4a5edaf-8cb9-42cc-a3e8-2311601af1a8}</Project>
-      <Name>Rabbit.IWasThere.Domain</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
