Remove sensitive data from web.config http://juanonsoftware.github.io/Secure-settings-on-azure/

--- a/Rabbit.IOnline/Web.Release.config
+++ b/Rabbit.IOnline/Web.Release.config
@@ -9,9 +9,17 @@
     finds an atrribute "name" that has a value of "MyDB".
   -->
 
+  <!--
+  For setting values on Azure Portal, visit this url as a reference http://juanonsoftware.github.io/Secure-settings-on-azure/
+  -->
+
+  <appSettings>
+    <add key="UseMigration" value="Set in Azure Portal"/>
+  </appSettings>
+
   <connectionStrings>
     <add name="IOnlineDb"
-      connectionString="Server=tcp:if2lpwetwz.database.windows.net,1433;Database=ionline;User ID=huanhvhd@if2lpwetwz;Password=Abc123456789;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
+      connectionString="Set in Azure Portal"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
