--- a/Rabbit.IOnline/Web.Release.config
+++ b/Rabbit.IOnline/Web.Release.config
@@ -13,6 +13,12 @@
   For setting values on Azure Portal, visit this url as a reference http://juanonsoftware.github.io/Secure-settings-on-azure/
   -->
 
+  <appSettings>
+    <add key="UseRedis" value="true" />
+    <add key="RedisEndPoint" value="Config in Azure Portal" />
+    <add key="RedisPassword" value="Config in Azure Portal" />
+  </appSettings>
+
   <connectionStrings>
     <add name="IOnlineDb"
       connectionString="Set in Azure Portal"
