--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -13,7 +13,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="CategoryDataFilePath" value="https://raw.githubusercontent.com/juanonsoftware/ionline/master/CategoryData.txt"/>
+    <add key="CategoryDataFilePath" value="https://raw.githubusercontent.com/juanonsoftware/ionline/master/CategoryData.txt" />
+    <add key="UseRedis" value="false" />
 
     <add key="recaptchaPublicKey" value="6LcF-AsTAAAAALrP6vdHiTK12gMldr17lkxydxho" />
     <add key="recaptchaPrivateKey" value="6LcF-AsTAAAAADnD0pQBmDtSEMWXjc4gDzWy_Ru1" />
