--- a/Rabbit.IWasThere.Services/Rabbit.IWasThere.Services.csproj
+++ b/Rabbit.IWasThere.Services/Rabbit.IWasThere.Services.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ConnectionMultiplexerManager.cs" />
     <Compile Include="DataServiceFactory.cs" />
     <Compile Include="RedisDataService.cs" />
     <Compile Include="DataHelper.cs" />
