--- a/Rabbit.IWasThere.Services/Rabbit.IWasThere.Services.csproj
+++ b/Rabbit.IWasThere.Services/Rabbit.IWasThere.Services.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\packages\Rabbit.Foundation.1.3.6\lib\Rabbit.Foundation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Rabbit.Integrations.Redis, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rabbit.Integrations.Redis.1.0.0\lib\Rabbit.Integrations.Redis.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Rabbit.Net, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Rabbit.Net.1.1.3.1\lib\Rabbit.Net.dll</HintPath>
       <Private>True</Private>
