--- a/Rabbit.IWasThere.Services/packages.config
+++ b/Rabbit.IWasThere.Services/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Rabbit.Foundation" version="1.3.6" targetFramework="net45" />
+  <package id="Rabbit.Integrations.Redis" version="1.0.0" targetFramework="net45" />
   <package id="Rabbit.Net" version="1.1.3.1" targetFramework="net45" />
   <package id="Rabbit.SerializationMaster" version="4.0.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.0.481" targetFramework="net45" />
