--- a/Rabbit.IWasThere.Services/packages.config
+++ b/Rabbit.IWasThere.Services/packages.config
@@ -4,6 +4,8 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Rabbit.Cache" version="1.0.1" targetFramework="net45" />
+  <package id="Rabbit.Cache.Redis" version="1.0.2" targetFramework="net45" />
   <package id="Rabbit.Foundation" version="1.3.6" targetFramework="net45" />
   <package id="Rabbit.Integrations.Redis" version="1.1.0" targetFramework="net45" />
   <package id="Rabbit.Net" version="1.1.3.1" targetFramework="net45" />
