Display credits on About page

--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -14,6 +14,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <add key="CategoryDataFilePath" value="https://raw.githubusercontent.com/juanonsoftware/ionline/master/CategoryData.txt" />
+    <add key="CreditsFilePath" value="https://raw.githubusercontent.com/juanonsoftware/ionline/master/Credits.txt" />
     <add key="UseRedis" value="false" />
 
     <add key="recaptchaPublicKey" value="6LcF-AsTAAAAALrP6vdHiTK12gMldr17lkxydxho" />
