--- a/Rabbit.IOnline/Web.Release.config
+++ b/Rabbit.IOnline/Web.Release.config
@@ -39,4 +39,18 @@
       </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Redirect to https">
+          <match url="(.*)"/>
+          <conditions>
+            <add input="{HTTPS}" pattern="Off"/>
+            <add input="{REQUEST_METHOD}" pattern="^get$|^head$" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
