--- a/Rabbit.IOnline/packages.config
+++ b/Rabbit.IOnline/packages.config
@@ -22,6 +22,7 @@
   <package id="Rabbit.Net" version="1.1.3.1" targetFramework="net45" />
   <package id="Rabbit.SerializationMaster" version="4.0.0" targetFramework="net45" />
   <package id="Rabbit.SerializationMaster.ServiceStack" version="1.0.0" targetFramework="net45" />
+  <package id="RabbitWebMvc" version="1.0.0" targetFramework="net45" />
   <package id="RecaptchaNet" version="1.3" targetFramework="net45" />
   <package id="ServiceStack.Text" version="4.0.40" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
