--- a/Rabbit.IWasThere.Data.Dapper/Data.Dapper.csproj
+++ b/Rabbit.IWasThere.Data.Dapper/Data.Dapper.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D104FF65-44C6-4FBC-80B8-CC2F7C917DAB}</ProjectGuid>
+    <ProjectGuid>{3198D9AF-1742-4160-8D7A-FBC46B1DAC04}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rabbit.IWasThere.Data.EF</RootNamespace>
-    <AssemblyName>Rabbit.IWasThere.Data.EF</AssemblyName>
+    <RootNamespace>Rabbit.IWasThere.Data.Dapper</RootNamespace>
+    <AssemblyName>Rabbit.IWasThere.Data.Dapper</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,59 +32,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AppDbContext.cs" />
-    <Compile Include="EfMessageRepository.cs" />
-    <Compile Include="Migrations\201509011026430_AddCustomStoredProcedures.cs" />
-    <Compile Include="Migrations\201509011026430_AddCustomStoredProcedures.Designer.cs">
-      <DependentUpon>201509011026430_AddCustomStoredProcedures.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509011027119_UpdateCountMessagesSP.cs" />
-    <Compile Include="Migrations\201509011027119_UpdateCountMessagesSP.Designer.cs">
-      <DependentUpon>201509011027119_UpdateCountMessagesSP.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509011025442_Init.cs" />
-    <Compile Include="Migrations\201509011025442_Init.Designer.cs">
-      <DependentUpon>201509011025442_Init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="DapperMessageCounter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Rabbit.IWasThere.Data\Rabbit.IWasThere.Data.csproj">
+    <ProjectReference Include="..\Rabbit.IWasThere.Data\Data.csproj">
       <Project>{3D8E0083-05BF-403D-82E0-781156A4C8D1}</Project>
-      <Name>Rabbit.IWasThere.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Rabbit.IWasThere.Domain\Rabbit.IWasThere.Domain.csproj">
-      <Project>{A4A5EDAF-8CB9-42CC-A3E8-2311601AF1A8}</Project>
-      <Name>Rabbit.IWasThere.Domain</Name>
+      <Name>Data</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201509011026430_AddCustomStoredProcedures.resx">
-      <DependentUpon>201509011026430_AddCustomStoredProcedures.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509011027119_UpdateCountMessagesSP.resx">
-      <DependentUpon>201509011027119_UpdateCountMessagesSP.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509011025442_Init.resx">
-      <DependentUpon>201509011025442_Init.cs</DependentUpon>
-    </EmbeddedResource>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
