--- a/Rabbit.IWasThere.Data.EF/Data.EF.csproj
+++ b/Rabbit.IWasThere.Data.EF/Data.EF.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Migrations\201509100857377_FixCountAllMessagesSP.Designer.cs">
       <DependentUpon>201509100857377_FixCountAllMessagesSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509100902190_FixCountAllMessagesSP2.cs" />
+    <Compile Include="Migrations\201509100902190_FixCountAllMessagesSP2.Designer.cs">
+      <DependentUpon>201509100902190_FixCountAllMessagesSP2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -98,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201509100857377_FixCountAllMessagesSP.resx">
       <DependentUpon>201509100857377_FixCountAllMessagesSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509100902190_FixCountAllMessagesSP2.resx">
+      <DependentUpon>201509100902190_FixCountAllMessagesSP2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
