--- a/Rabbit.IOnline/IOnline.csproj
+++ b/Rabbit.IOnline/IOnline.csproj
@@ -76,6 +76,14 @@
       <HintPath>..\packages\RabbitWebMvc.1.0.0\lib\Rabbit.Web.Mvc.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Raven.Abstractions, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
+      <HintPath>..\packages\RavenDB.Client.3.0.3785\lib\net45\Raven.Abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Raven.Client.Lightweight, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
+      <HintPath>..\packages\RavenDB.Client.3.0.3785\lib\net45\Raven.Client.Lightweight.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Recaptcha.Web, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RecaptchaNet.1.3\lib\net45\Recaptcha.Web.dll</HintPath>
       <Private>True</Private>
@@ -85,6 +93,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
@@ -243,6 +252,10 @@
     <ProjectReference Include="..\Rabbit.Helper\Helper.csproj">
       <Project>{90D38AF3-E84B-49CE-B45E-D652196782A0}</Project>
       <Name>Helper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rabbit.IOnline.Data.RevenDB\Data.RevenDB.csproj">
+      <Project>{C4667B1E-6D83-438C-BED6-89E27FD8C2FB}</Project>
+      <Name>Data.RevenDB</Name>
     </ProjectReference>
     <ProjectReference Include="..\Rabbit.IWasThere.Common\Common.csproj">
       <Project>{EB60EAA6-42EE-4EB0-99FD-7A911FBEFEAD}</Project>
