--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -19,9 +19,12 @@
 
     <add key="recaptchaPublicKey" value="6LcF-AsTAAAAALrP6vdHiTK12gMldr17lkxydxho" />
     <add key="recaptchaPrivateKey" value="6LcF-AsTAAAAADnD0pQBmDtSEMWXjc4gDzWy_Ru1" />
+
+    <add key="RavenDbUrl" value="https://huanhvhd-odwv.ravenhq.com/databases/huanhvhd-db01"/>
+    <add key="RavenDbApiKey" value="580ebd20-c201-4888-971f-62fc6c4a0b33"/>
   </appSettings>
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
