--- a/Rabbit.IOnline.Autofac/IOnline.Autofac.csproj
+++ b/Rabbit.IOnline.Autofac/IOnline.Autofac.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D104FF65-44C6-4FBC-80B8-CC2F7C917DAB}</ProjectGuid>
+    <ProjectGuid>{8A2FE8F8-B7A4-4D3B-ADF5-E31E213045F5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rabbit.IWasThere.Data.EF</RootNamespace>
-    <AssemblyName>Rabbit.IWasThere.Data.EF</AssemblyName>
+    <RootNamespace>Rabbit.IOnline.Autofac</RootNamespace>
+    <AssemblyName>Rabbit.IOnline.Autofac</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,41 +32,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AppDbContext.cs" />
-    <Compile Include="EfMessageRepository.cs" />
-    <Compile Include="IDbContext.cs" />
-    <Compile Include="Migrations\201509011026430_AddCustomStoredProcedures.cs" />
-    <Compile Include="Migrations\201509011026430_AddCustomStoredProcedures.Designer.cs">
-      <DependentUpon>201509011026430_AddCustomStoredProcedures.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509011027119_UpdateCountMessagesSP.cs" />
-    <Compile Include="Migrations\201509011027119_UpdateCountMessagesSP.Designer.cs">
-      <DependentUpon>201509011027119_UpdateCountMessagesSP.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509011025442_Init.cs" />
-    <Compile Include="Migrations\201509011025442_Init.Designer.cs">
-      <DependentUpon>201509011025442_Init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509100703324_AddCountAllMessagesSPAndUpdateCountMessagesSP.cs" />
-    <Compile Include="Migrations\201509100703324_AddCountAllMessagesSPAndUpdateCountMessagesSP.Designer.cs">
-      <DependentUpon>201509100703324_AddCountAllMessagesSPAndUpdateCountMessagesSP.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509100857377_FixCountAllMessagesSP.cs" />
-    <Compile Include="Migrations\201509100857377_FixCountAllMessagesSP.Designer.cs">
-      <DependentUpon>201509100857377_FixCountAllMessagesSP.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201509100902190_FixCountAllMessagesSP2.cs" />
-    <Compile Include="Migrations\201509100902190_FixCountAllMessagesSP2.Designer.cs">
-      <DependentUpon>201509100902190_FixCountAllMessagesSP2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
+    <Reference Include="Autofac, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.1.0\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Autofac.Integration.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Mvc4.3.1.0\lib\net40\Autofac.Integration.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -75,38 +51,30 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Rabbit.IWasThere.Data.Dapper\Data.Dapper.csproj">
+      <Project>{3198D9AF-1742-4160-8D7A-FBC46B1DAC04}</Project>
+      <Name>Data.Dapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Rabbit.IWasThere.Data.EF\Data.EF.csproj">
+      <Project>{D104FF65-44C6-4FBC-80B8-CC2F7C917DAB}</Project>
+      <Name>Data.EF</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Rabbit.IWasThere.Data\Data.csproj">
       <Project>{3D8E0083-05BF-403D-82E0-781156A4C8D1}</Project>
       <Name>Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Rabbit.IWasThere.Domain\Domain.csproj">
-      <Project>{A4A5EDAF-8CB9-42CC-A3E8-2311601AF1A8}</Project>
-      <Name>Domain</Name>
+    <ProjectReference Include="..\Rabbit.IWasThere.Services\Services.csproj">
+      <Project>{F8EA6962-80D1-4B6B-A189-746EC8A452A5}</Project>
+      <Name>Services</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201509011026430_AddCustomStoredProcedures.resx">
-      <DependentUpon>201509011026430_AddCustomStoredProcedures.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509011027119_UpdateCountMessagesSP.resx">
-      <DependentUpon>201509011027119_UpdateCountMessagesSP.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509011025442_Init.resx">
-      <DependentUpon>201509011025442_Init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509100703324_AddCountAllMessagesSPAndUpdateCountMessagesSP.resx">
-      <DependentUpon>201509100703324_AddCountAllMessagesSPAndUpdateCountMessagesSP.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509100857377_FixCountAllMessagesSP.resx">
-      <DependentUpon>201509100857377_FixCountAllMessagesSP.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201509100902190_FixCountAllMessagesSP2.resx">
-      <DependentUpon>201509100902190_FixCountAllMessagesSP2.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
