--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -20,7 +20,8 @@
     <add key="recaptchaPublicKey" value="6LcF-AsTAAAAALrP6vdHiTK12gMldr17lkxydxho" />
     <add key="recaptchaPrivateKey" value="6LcF-AsTAAAAADnD0pQBmDtSEMWXjc4gDzWy_Ru1" />
 
-    <add key="DatabaseSystem" value="RavenDB" />
+    <!--<add key="DatabaseSystem" value="RavenDB" />-->
+    <add key="DatabaseSystem" value="DocumentDB" />
 
     <add key="RavenDbUrl" value="https://huanhvhd-odwv.ravenhq.com/databases/huanhvhd-db01" />
     <add key="RavenDbApiKey" value="580ebd20-c201-4888-971f-62fc6c4a0b33" />
