Fix endpoint of DocumentDB

--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -21,7 +21,7 @@
     <add key="recaptchaPublicKey" value="6LcF-AsTAAAAALrP6vdHiTK12gMldr17lkxydxho" />
     <add key="recaptchaPrivateKey" value="6LcF-AsTAAAAADnD0pQBmDtSEMWXjc4gDzWy_Ru1" />
 
-    <add key="DatabaseSystem" value="" />
+    <add key="DatabaseSystem" value="DocumentDB" />
 
     <add key="RavenDbUrl" value="" />
     <add key="RavenDbApiKey" value="" />
