--- a/Rabbit.IOnline/packages.config
+++ b/Rabbit.IOnline/packages.config
@@ -24,6 +24,7 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
+  <package id="Rabbit.Configuration" version="1.0.0" targetFramework="net45" />
   <package id="Rabbit.Foundation" version="1.4.0" targetFramework="net45" />
   <package id="Rabbit.Net" version="1.1.3.1" targetFramework="net45" />
   <package id="Rabbit.SerializationMaster" version="4.0.0" targetFramework="net45" />
