--- a/Rabbit.IWasThere.Data.DocumentDB/Data.DocumentDB.csproj
+++ b/Rabbit.IWasThere.Data.DocumentDB/Data.DocumentDB.csproj
@@ -62,6 +62,10 @@
       <HintPath>..\packages\Newtonsoft.Json.5.0.7\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Rabbit.Configuration, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rabbit.Configuration.1.0.0\lib\Rabbit.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
