--- a/Rabbit.IWasThere.Data.DocumentDB/packages.config
+++ b/Rabbit.IWasThere.Data.DocumentDB/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Azure.DocumentDB" version="1.4.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.7" targetFramework="net45" />
+  <package id="Rabbit.Configuration" version="1.0.0" targetFramework="net45" />
 </packages>
