--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -14,9 +14,12 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="CategoryDataFilePath" value="https://raw.githubusercontent.com/juanonsoftware/ionline/master/CategoryData.txt" />
+    <add key="CategoryDataFilePath" value="{ENV}" />
     <add key="CreditsFilePath" value="https://raw.githubusercontent.com/juanonsoftware/ionline/master/Credits.txt" />
+
     <add key="UseRedis" value="false" />
+    <add key="RedisEndPoint" value="{ENV}" />
+    <add key="RedisPassword" value="{ENV}" />
 
     <add key="recaptchaPublicKey" value="6LcF-AsTAAAAALrP6vdHiTK12gMldr17lkxydxho" />
     <add key="recaptchaPrivateKey" value="6LcF-AsTAAAAADnD0pQBmDtSEMWXjc4gDzWy_Ru1" />
